prost-reflect/tests/snapshots/main__dependency_resolution_transitive3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
help: "'Dependency' is defined in 'transitive.proto', which is not imported by 'root.proto'"
labels: []
message: "name 'Dependency' is not defined"
related: []
severity: error

