prost-reflect/tests/snapshots/main__enum_default1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - enumType:
      - name: Foo
        value:
          - name: DEFAULT
            number: 1
    name: test.proto

