prost-reflect/tests/snapshots/main__enum_default2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: the first value for proto3 enums must be 0
related: []
severity: error

