prost-reflect/tests/snapshots/main__enum_default3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - enumType:
      - name: Foo
        value:
          - name: DEFAULT
            number: 0
    name: test.proto
    syntax: proto3

