prost-reflect/tests/snapshots/main__enum_field_invalid_default4.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "invalid default value 'ONE' for type 'foo.Foo'"
related: []
severity: error

