prost-reflect/tests/snapshots/main__enum_field_invalid_default5.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - enumType:
      - name: Foo
        value:
          - name: ZERO
            number: 0
    messageType:
      - field:
          - defaultValue: ZERO
            jsonName: foo
            label: LABEL_OPTIONAL
            name: foo
            number: 1
            type: TYPE_ENUM
            typeName: ".foo.Foo"
        name: Message
    name: test.proto
    package: foo

