prost-reflect/tests/snapshots/main__enum_field_invalid_default7.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - messageType:
      - enumType:
          - name: Foo
            value:
              - name: ZERO
                number: 0
        field:
          - defaultValue: ZERO
            jsonName: foo
            label: LABEL_OPTIONAL
            name: foo
            number: 1
            type: TYPE_ENUM
            typeName: ".foo.Message.Foo"
        name: Message
    name: test.proto
    package: foo

